<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7043"
    tools:context="com.ahtaya.chidozie.myegusidelicacy.MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:contentDescription="@string/egusi_soup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/egusi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:layout_marginBottom="26dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/name" />

            <Button
                style="@style/button"
                android:textSize="26sp"
                android:onClick="startQuiz"
                android:text="@string/start_quiz" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
